Changed Db Name

--- a/erp-parent/erp-main-web/src/main/resources/application.properties
+++ b/erp-parent/erp-main-web/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database connection details
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=TCO2DB
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SampleDB
 spring.datasource.username=atUser
 spring.datasource.password=atpasswordA1
 spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
