added angular  app

--- a/erp-parent/erp-main-web/.project
+++ b/erp-parent/erp-main-web/.project
@@ -3,6 +3,7 @@
 	<name>erp-main-web</name>
 	<comment></comment>
 	<projects>
+		<project>erp-lib-common</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
