--- a/erp-parent/erp-main-web/pom.xml
+++ b/erp-parent/erp-main-web/pom.xml
@@ -75,67 +75,86 @@
 			<plugin>
 				<groupId>com.github.eirslett</groupId>
 				<artifactId>frontend-maven-plugin</artifactId>
-				<version>1.6</version>
+				<version>1.3</version>
 				<configuration>
-					<workingDirectory>src/main/webapp</workingDirectory>
-					<installDirectory>target</installDirectory>
+					<nodeVersion>v12.14.1</nodeVersion>
+					<npmVersion>6.3.0</npmVersion>
+					<workingDirectory>src/main/webapp/</workingDirectory>
 				</configuration>
 				<executions>
 					<execution>
-						<!-- optional: you don't really need execution ids, but it looks nice 
-							in your build log. -->
 						<id>install node and npm</id>
 						<goals>
 							<goal>install-node-and-npm</goal>
 						</goals>
-						<!-- optional: default phase is "generate-resources" -->
-						<phase>generate-resources</phase>
-						<configuration>
-							<nodeVersion>v12.14.1</nodeVersion>
-
-							<!-- optional: with node version greater than 4.0.0 will use npm provided 
-								by node distribution <npmVersion>2.15.9</npmVersion> -->
-
-							<!-- optional: where to download node and npm from. Defaults to https://nodejs.org/dist/ 
-								<downloadRoot>http://myproxy.example.org/nodejs/</downloadRoot> -->
-						</configuration>
 					</execution>
 					<execution>
 						<id>npm install</id>
 						<goals>
 							<goal>npm</goal>
 						</goals>
-
-						<!-- optional: default phase is "generate-resources" -->
-						<phase>generate-resources</phase>
-
+					</execution>
+					<execution>
+						<id>npm run build</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
 						<configuration>
-							<!-- optional: The default argument is actually "install", so unless 
-								you need to run some other npm command, you can remove this whole <configuration> 
-								section. -->
-							<arguments>install</arguments>
+							<arguments>run build</arguments>
 						</configuration>
+					</execution>
+					<execution>
+						<id>prod</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<configuration>
+							<arguments>run-script build</arguments>
+						</configuration>
+						<phase>generate-resources</phase>
 					</execution>
 				</executions>
 			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<packagingExcludes>WEB-INF/lib/tomcat-*.jar</packagingExcludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
 				<executions>
 					<execution>
-						<phase>package</phase>
-						<configuration>
-							<attachClasses>true</attachClasses>
-							<webXml>${basedir}/src/main/webapp/WEB-INF/web.xml</webXml>
-						</configuration>
+						<id>copy-resources</id>
+						<phase>validate</phase>
 						<goals>
-							<goal>inplace</goal>
+							<goal>copy-resources</goal>
 						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/classes/resources/</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${project.parent.basedir}/src/main/webapp/dist/erp-np-app</directory>
+								</resource>
+							</resources>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
-
 		</plugins>
 	</build>
 </project>
