--- a/erp-parent/erp-main-web/src/main/resources/application.properties
+++ b/erp-parent/erp-main-web/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 # Database connection details
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SampleDB
-spring.datasource.username=atUser
-spring.datasource.password=atpasswordA1
-spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
-spring.datasource.test-on-borrow=true
-spring.datasource.validationQuery=SELECT 1
-spring.datasource.tomcat.validation-interval=30000
+#mysql
+#spring.datasource.jdbc-url =jdbc:mysql://localhost:3306/abc
+
+
+spring.datasource.url = jdbc:mysql://localhost:3306/abc
+spring.datasource.driver-class-name = com.mysql.jdbc.Driver
+spring.datasource.username= atUser
+spring.datasource.password= atUser123
+spring.datasource.driver-class = com.mysql.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto = create
+spring.datasource.pool-size=30
